# lazyplex

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
example/: app.py
examples/: argument_processing.py  basic.py  conditional_processing.py  context.py  custom_plugin.py  data_transformation.py  file_processing.py  progress_bar.py  sequential.py
src/lazyplex/: __init__.py  run.py
src/lazyplex/core/: __init__.py  actions.py  application.py  constants.py  context.py  errors.py  helpers.py  plugin.py
src/lazyplex/operators/: dist.py  random.py
src/lazyplex/plugins/: __init__.py  progress_bar.py
